5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1585_825.log
== TEST (2019-03-25 13:14:03) 
-- CODE:
from math import *
r = float(input("raio"))
area = pir**2

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pir**2
NameError: name 'pir' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:15:18) 
-- CODE:
from math import pi 
r = float(input("digite o raio"))
area = pi*r**2

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pir**2
NameError: name 'pir' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:32:43) 
-- CODE:
from math import pi 
r = float(input("digite o raio"))
area = pi*r**2

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pir**2
NameError: name 'pir' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:33:27) 
-- CODE:
from math import pi
r = float(input("digite o raio"))
area = pi *r **2

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pir**2
NameError: name 'pir' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:33:44) 
-- CODE:
from math import pi
r = float(input("digite o raio: "))
area = pi *r **2

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pir**2
NameError: name 'pir' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:34:11) 
-- CODE:
from math import pi
r = float(input("digite o raio: "))
area = pi *r **2
print(area)
-- OUTPUT:
63.61725123519331
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:35:26) 
-- CODE:
from math import pi
r = float(input("digite o raio: "))
area = pi *r **2
vol = 4*pir**3
print(area)
print(vol)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vol = 4*pir**3
NameError: name 'pir' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:35:39) 
-- CODE:
from math import pi
r = float(input("digite o raio: "))
area = pi *r **2
vol = 4*pi*r**3
print(area)
print(vol)
-- OUTPUT:
63.61725123519331
1145.1105222334795
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:35:49) 
-- CODE:
from math import pi
r = float(input("digite o raio: "))
area = pi *r **2
vol = 4*pi*r**3
print(area)
print(vol)
-- EXECUTION TIME:
0.164524
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.61725123519331
1145.1105222334795
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.3879062809779
23613.227054029066
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:36:37) 
-- CODE:
from math import pi
r = float(input("digite o raio: "))
area = pi *r **2
vol = 4/3*pi*r**3
print(round(area,3)
print(round(vol,3))
-- ERROR:
File "XXXX", line 6
    print(round(vol,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:37:01) 
-- CODE:
from math import pi
r = float(input("digite o raio: "))
area = pi *r **2
volume = 4/3*pi*r**3
print(round(area,3)
print(round(volume,3))
-- ERROR:
File "XXXX", line 6
    print(round(volume,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:37:49) 
-- CODE:
from math import pi
r = float(input("digite o raio: "))
area = pi *r **2
volume = 4/3*pi*r**3
print(round(area,3)
print(round(volume,3))
-- ERROR:
File "XXXX", line 6
    print(round(volume,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:38:14) 
-- CODE:
from math import pi
r = float(input("digite o raio: "))
area = pi *r **2
volume = 4/3*pi*r**3
print(round(area,3))
print(round(volume,3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:38:26) 
-- CODE:
from math import pi
r = float(input("digite o raio: "))
area = pi *r **2
volume = 4/3*pi*r**3
print(round(area,3))
print(round(volume,3))
-- EXECUTION TIME:
0.194375
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
